Upload code for cross diseased tissue CD8 T cell analysis

--- a/Code/bulk_RNAseq_sorted_GzmK_GzmB.ipynb
+++ b/Code/bulk_RNAseq_sorted_GzmK_GzmB.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyze low-input bulk RNA-seq data obtained from fixed and intracellularly stained RA synovial fluid CD8 T cells sorted for GzmK and GzmB expression."
+    "## Analyze low-input bulk RNA-seq data obtained from fixed and intracellularly stained RA synovial fluid CD8 T cells sorted for GzmK and GzmB expression.\n",
+    "## Fan Zhang"
    ]
   },
   {
